统一5维度结构①②③④⑤ + 去公司名（资料/面试用化名，简历保留真名）